--- a/Start.html
+++ b/Start.html
@@ -23,7 +23,7 @@
     </div>
 
       <p class="header"></p>
-      <h1 id="rubrik">ChessNation</h1>
+      <h1 id="rubrik">Chessnation</h1>
       <p class="txt"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus autem perferendis repellat laudantium ratione, numquam inventore similique, voluptate possimus error unde at eum aperiam labore eaque! Totam quod harum tenetur velit nihil sed recusandae facilis voluptatem eveniet sequi labore, fuga commodi eligendi voluptatibus ab reprehenderit. In, odio minima! Accusamus sunt labore id distinctio ipsa, .</p>
       <img id="img1" src="img/ChessBoardPic.jpg" alt="ChessBoard">
       <a class="link" href="#">Link</a>
